[JAEGER] Fixed incorrect use of syncExit() in relational compare (bug 585391).